fixed misalignment and broken autocomplete

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_resourceplanner.scss
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_resourceplanner.scss
@@ -276,3 +276,6 @@ background-color: #cacaca;
 .grayoutContainer{
 	opacity: 0.5;
 }
+.autocompleteSearchInput{
+	padding-top:25px;
+}
